# marchers

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt  decompress.cpp  decompress.h  main.cpp  march.cpp  march.h
test/: CMakeLists.txt  march_test.cpp
unit_tests/: CMakeLists.txt  decompress_test.cpp  truth_test.cpp
